# midas-rs

./: .gitignore  Cargo.toml
src/: client.rs  error.rs  historical.rs  lib.rs  response.rs  trading.rs  utils.rs
tests/: integration_test.rs
tests/data/: test_data.backtest.json
