[package]
name = "midas_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version ="1.38.1", features = ["full"]}
reqwest = {version ="0.12.5", features = ["json"]}
serde = {version="1.0.204"}
serde_json = "1.0"
anyhow ="1.0.86"
thiserror ={version = "1.0.63"}
derive_more = {version = "1.0.0-beta", features = ["from"]}
# derive_from = "0.1.1"
mbn = {path = "../../mbn/mbn"}
midasbackend = {path = "../../midasbackend"}

[dev-dependencies]
serial_test = "0.5"
regex = "1.3.9" 
