[package]
name = "midas_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version ="1.38.1", features = ["full"]}
reqwest = {version ="0.12.5", features = ["json"]}
serde = {version="1.0.204"}
serde_json = "1.0"
anyhow ="1.0.86"
thiserror ={version = "1.0.63"}
derive_more = {version = "1.0.0-beta", features = ["from"]}
dotenv = "0.15"
chrono = "0.4"
futures-util = "0.3"  
axum = "0.6"
mbn = { git = "https://github.com/anthonyb8/mbn.git", branch = "main" }
# mbn = {path = "../../mbn/mbn/"}

[dev-dependencies]
serial_test = "3.1.1"
regex = "1.3.9"

[lib]
crate-type = ["rlib"]
